<resources>

    <string name="app_name">DSCS</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_jobs">Choose job</string>
    <string name="pref_summary_jobs">Job currently working on: </string>

    <string name="pref_title_clear_tables">Clear tables</string>
    <string name="pref_summary_clear_tables">Delete content from data tables</string>

    <string name="pref_title_number_of_tasks">Number of tasks</string>
    <string name="pref_summary_number_of_tasks">Current number of tasks to execute: </string>
    <string name="pref_default_number_of_tasks">10</string>

    <string name="pref_title_crawling_delay">Crawling delay</string>
    <string name="pref_summary_crawling_delay">Delay between tasks crawling[ms]:</string>
    <string name="pref_default_crawling_delay">1000</string>

    <string name="pref_title_init_tasks">Initialize tasks</string>

    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>

    <string name="pref_title_delete_score">Delete the highest score</string>
    <string name="pref_summary_delete_score">The highest score is </string>
    <string name="pref_are_you_sure">Are you sure?</string>

    <!-- StartFragment -->
    <string name="if_play_circle_outline">&#xE039;</string>
    <string name="if_pause_circle_outline">&#xE036;</string>
    <string name="if_sentiment_very_satisfied">&#xE815;</string>

    <!-- PreviewFragment -->
    <string name="if_task_status_invalid">&#xE629;</string>
    <string name="if_task_status_done">&#xE876;</string>
    <string name="if_task_status_inserted">&#xE628;></string>
    <string name="if_task_status_in_progress">&#xE627;</string>

    <!-- Toast messages -->
    <string name="toast_empty_table">The %s table is empty!</string>
    <string name="toast_all_tables_cleared">All tables have been cleared.</string>
    <string name="toast_all_tasks_done">DSCS: All tasks are done.</string>

    <!-- Notification messages -->
    <string name="notification_deleting_items_from_table">Deleting items from %s</string>
    <string name="notification_clearing_tables">Clearing tables…</string>
    <string name="notification_job_finished">A job is finished!</string>
    <string name="notification_all_tasks_done">All tasks for %s are done.</string>

    <!-- Crawling info messages -->
    <string name="info_job_in_progress">Crawling is in progress.</string>
    <string name="info_click_to_start_crawling">Click to start crawling.</string>
    <string name="parsing_task_with_key">…parsing task with key %d…</string>
    <string name="storing_task_with_key">…storing task with key %d…</string>

    <!-- Game messages -->
    <string name="activity_game_score">Rezultat: %d</string>
    <string name="activity_game_do_you_want_to_start_again">Postigli ste %1$d poena. Najveći broj poena do sada je %2$d . Da li želite da igrate ponovo?</string>
    <string name="activity_game_game_over">Kraj igre!</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="activity_game_starting_level">Starting level %d...</string>
    <string name="toast_no_internet">There is no internet connection!</string>

</resources>