<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="Movie crawling"
        android:entries="@array/pref_jobs_titles"
        android:entryValues="@array/pref_jobs_values"
        android:key="@string/pref_title_jobs"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_summary_jobs"
        android:title="@string/pref_title_jobs" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_clear_tables_titles"
        android:entryValues="@array/pref_clear_tables_values"
        android:key="@string/pref_title_clear_tables"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_summary_clear_tables"
        android:title="@string/pref_title_clear_tables" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_number_of_tasks"
        android:inputType="number"
        android:key="@string/pref_title_number_of_tasks"
        android:selectAllOnFocus="true"
        android:summary="@string/pref_summary_number_of_tasks"
        android:title="@string/pref_title_number_of_tasks" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_crawling_delay"
        android:inputType="number"
        android:key="@string/pref_title_crawling_delay"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_crawling_delay" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_title_init_tasks"
        android:title="@string/pref_title_init_tasks" />

</PreferenceScreen>